# danish-market-scraper

./: .commitlint.toml  Cargo.toml  README.md
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.husky/: commit-msg
src/: main.rs  prelude.rs
src/models/: address.rs  api_response.rs  links.rs  location.rs  mod.rs  property.rs
src/scraper/: error.rs  http_client.rs  mod.rs
