[package]
name = "danish-market-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.25.0"
governor = "0.10.4"
tower = { version = "0.5.3", features = ["retry", "timeout"] }
tokio-cron-scheduler = "0.15.1"
serde = "1.0.228"
serde_json = "1.0.149"
chrono = "0.4.43"
tracing = "0.1"
tracing-subscriber = "0.3.0"
dotenvy = "0.15.7"
config = "0.15.19"
thiserror = "2.0.18"
derive_more = "2.1.1"

[dependencies.sqlx] 
version = "0.8.6" 
features = ["runtime-tokio", "sqlite", "postgres", "macros"]

[dev-dependencies]
cargo-husky = "1.5.0"
anyhow = "1.0.101"